simple conditional types working

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -1,10 +1,11 @@
-<div class="type-name top-level" *ngIf="topLevel">{{ type.name.name }}</div>
+<div class="type-name top-level" *ngIf="topLevel">{{ type?.name.name }}</div>
 <div class="typed-value-container" *ngIf="isPrimitive">
   <!--  <div class="type-name">{{ typedObject.typeName }}</div>-->
   <div class="type-value">{{ typedObject.value }}</div>
 </div>
 <div class="typed-object-container" *ngIf="isTypedObject">
-  <div *ngFor="let attributeName of typedObjectAttributeNames" class="attribute-row" [class.object-row]="!getTypeForAttribute(attributeName).scalar">
+  <div *ngFor="let attributeName of typedObjectAttributeNames" class="attribute-row"
+       [class.object-row]="!getTypeForAttribute(attributeName).scalar">
     <div class="attribute-name">
       {{ attributeName }}
     </div>
@@ -12,9 +13,10 @@
       <div class="type-name">{{ getTypeForAttribute(attributeName).name.name }}</div>
     </div>
     <div class="attribute-value table-cell"
-         *ngIf="getTypeForAttribute(attributeName).scalar">{{ getTypedObjectAttribute(attributeName).value }}</div>
+         *ngIf="getTypeForAttribute(attributeName).scalar">{{ getTypedObjectAttributeValue(attributeName) }}</div>
     <app-object-view *ngIf="!getTypeForAttribute(attributeName).scalar"
                      [instance]="getTypedObjectAttribute(attributeName)"
+                     [type]="getTypeForAttribute(attributeName)"
                      [schema]="schema"
                      [topLevel]="false"
     ></app-object-view>
@@ -26,6 +28,7 @@
     <div class="collection-member">
       <app-object-view [instance]="collectionMember"
                        [schema]="schema"
+                       [type]="type"
                        [topLevel]="false"
       ></app-object-view>
 
@@ -33,3 +36,4 @@
   </div>
 
 </div>
+
