--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
@@ -4,12 +4,23 @@
   display: none;
 }
 
+.result-object-view {
+  margin-top: 1rem;
+}
+
+app-call-explorer {
+  margin-top: 1rem;
+  display: block;
+}
+
 .result-status {
   display: flex;
   align-items: center;
+
   i {
     margin-right: 8px;
   }
+
   padding: 6px 0;
   padding: 8px;
   //box-shadow: 0 1px 2px rgba(0, 0, 0, .6);
@@ -46,20 +57,24 @@
     font-size: 0.8rem;
     color: $grey-1;
     cursor: pointer;
+
     &:hover {
       color: $dark-grey-1;
     }
+
     button {
       width: unset;
       height: unset;
       line-height: unset;
     }
   }
+
   .duration {
     width: 100%;
     font-size: 0.8rem;
     color: $grey-1;
   }
+
   .context-container {
 
   }
