reading of csv and csv lists now works

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -23,8 +23,8 @@
   </div>
 </div>
 <div class="typed-object-container" *ngIf="isArray">
-  <div *ngFor="let collectionMember of instance; let i = index" class="result-collection-member">
-    <div class="collection-index">#{{i + 1}}</div>
+  <div *ngFor="let collectionMember of instance; let i = index; let odd = odd" class="result-collection-member">
+    <div class="collection-index" [class.odd]="odd">#{{i + 1}}</div>
     <div class="collection-member">
       <app-object-view [instance]="collectionMember"
                        [schema]="schema"
