--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary" style="z-index: 999">
   <span>Query wizard</span>
+  <span class="spacer"></span>
+  <app-search-bar-container></app-search-bar-container>
 </mat-toolbar>
 <div class="page-content" style="z-index: 0">
   <div class="row">
