--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/call-explorer/operation-view.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/call-explorer/operation-view.component.scss
@@ -2,7 +2,7 @@
 @import "call-explorer.component";
 
 .operation-view {
-  background-color: $grey-1;
+  background-color: $blue-grey-1;
   position: relative;
 }
 
