--- a/vyne-parent/vyne-query-service/src/main/web/src/theme-colors.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/theme-colors.scss
@@ -1,9 +1,9 @@
 $light-grey-1 : #ecf0f2;
 $light-grey-2 : #ced9de;
 $light-grey-3 : #aebfc9;
-$grey-1 : #8ea5b3;
-$grey-2 : #7592a2;
-$grey-3 : #5d7f92;
+$blue-grey-1 : #8ea5b3;
+$blue-grey-2 : #7592a2;
+$blue-grey-3 : #5d7f92;
 $dark-grey-1 : #4a6572;
 $dark-grey-2 : #344955;
 $dark-grey-3 : #232F34;
