--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
@@ -21,7 +21,6 @@ app-call-explorer {
     margin-right: 8px;
   }
 
-  padding: 6px 0;
   padding: 8px;
   //box-shadow: 0 1px 2px rgba(0, 0, 0, .6);
   margin-bottom: 8px;
@@ -55,7 +54,7 @@ app-call-explorer {
   .expand-button {
     text-align: center;
     font-size: 0.8rem;
-    color: $grey-1;
+    color: $blue-grey-1;
     cursor: pointer;
 
     &:hover {
@@ -72,7 +71,7 @@ app-call-explorer {
   .duration {
     width: 100%;
     font-size: 0.8rem;
-    color: $grey-1;
+    color: $blue-grey-1;
   }
 
   .context-container {
