improve transformation of csv-list

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -28,7 +28,7 @@
     <div class="collection-member">
       <app-object-view [instance]="collectionMember"
                        [schema]="schema"
-                       [type]="type"
+                       [type]="collectionMemberType"
                        [topLevel]="false"
       ></app-object-view>
 
