--- a/vyne-parent/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
@@ -1,6 +1,8 @@
 <div class="file-list" *ngIf="displaySidebar">
   <div class="file-list-entry" *ngFor="let source of sources" (click)="select(source)">
-    <img class="icon" src="assets/img/file.svg"><span>{{ source.origin }}</span>
+    <img class="icon" src="assets/img/file.svg">
+    <span class="file-name">{{ source.origin }}</span>
+    <span class="version" *ngIf="source.version">{{ source.version }}</span>
   </div>
 </div>
 <mat-tab-group class="code-viewer" [(selectedIndex)]="selectedIndex">
