--- a/vyne-parent/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
@@ -19,6 +19,7 @@
 
 .file-list-entry {
   display: flex;
+  align-items: center;
   color: $dark-list-item;
   padding: 1rem;
 
@@ -33,6 +34,17 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     cursor: pointer;
+  }
+
+  .file-name {
+    flex-grow: 1;
+    margin-right: 2rem;
+  }
+  .version {
+    background-color: rgba(255,255,255,0.2);
+    display: block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 10rem;
   }
 }
 
