--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="typed-object-container" *ngIf="isTypedObject">
   <div *ngFor="let attributeName of typedObjectAttributeNames" class="attribute-row"
-       [class.object-row]="!getTypeForAttribute(attributeName).scalar">
+       [class.object-row]="!getTypeForAttribute(attributeName).isScalar">
     <div class="attribute-name">
       {{ attributeName }}
     </div>
@@ -13,8 +13,8 @@
       <div class="type-name">{{ getTypeForAttribute(attributeName).name.name }}</div>
     </div>
     <div class="attribute-value table-cell"
-         *ngIf="getTypeForAttribute(attributeName).scalar">{{ getTypedObjectAttributeValue(attributeName) }}</div>
-    <app-object-view *ngIf="!getTypeForAttribute(attributeName).scalar"
+         *ngIf="getTypeForAttribute(attributeName).isScalar">{{ getTypedObjectAttributeValue(attributeName) }}</div>
+    <app-object-view *ngIf="!getTypeForAttribute(attributeName).isScalar"
                      [instance]="getTypedObjectAttribute(attributeName)"
                      [type]="getTypeForAttribute(attributeName)"
                      [schema]="schema"
