--- a/vyne-query-service/src/main/web/src/app/type-viewer/description-editor/description-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/description-editor/description-editor.component.scss
@@ -34,3 +34,10 @@
     margin-left: 0.5rem;
   }
 }
+
+::ng-deep {
+  markdown > p {
+    // TODO : I suspect this will look naff when there are multiple paragraphs
+    margin: 0;
+  }
+}
