fix: search bar appears more consistently

--- a/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.scss
@@ -1,4 +1,5 @@
 @import "src/theme";
+@import "src/toolbar";
 
 .container {
   flex: 1;
@@ -9,9 +10,6 @@
 
 }
 
-.spacer {
-  width: 100%;
-}
 .button-bar {
   display: flex;
   margin-top: 1rem;
