--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
@@ -1,5 +1,5 @@
 @import "src/theme";
-
+@import "src/toolbar";
 :host {
   background-color: $body-bg;
   display: block;
@@ -17,12 +17,6 @@
 }
 
 
-mat-toolbar {
-  flex: 0 0 $toolbar-height;
-  z-index: 999;
-  display: flex;
-  padding-right: 4rem;
-}
 
 .spacer {
   flex-grow: 1;
