--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
@@ -1,15 +1,9 @@
 @import "src/theme";
-
+@import "src/toolbar";
 :host {
   background-color: $body-bg;
 }
 
-mat-toolbar {
-  flex: 0 0 $toolbar-height;
-  z-index: 999;
-  display: flex;
-  padding-right: 4rem;
-}
 
 .spacer {
   flex-grow: 1;
