--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>Type Explorer</span>
-  <span class="spacer"></span>
+  <span class="toolbar-spacer"></span>
   <app-search-bar-container></app-search-bar-container>
 
 <!--  <button mat-button>Create</button>-->
