--- a/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
@@ -6,18 +6,25 @@
   //font-family: $font-sans-alt;
 }
 
+ngx-monaco-editor {
+  height: 100%;
+}
+
 .file-list {
   min-width: 20rem;
   //margin-top: 48px; // to match height of the tab bar
   margin-left: 1rem;
   font-size: 0.9rem;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .file-list-entry {
   display: flex;
   align-items: center;
   color: $dark-list-item;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
 
   img {
     width: 16px;
@@ -37,10 +44,12 @@
     margin-right: 2rem;
   }
   .version {
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     display: block;
     padding: 0.2rem 0.5rem;
-    border-radius: 10rem;
+    border-radius: 10px;
+    width: fit-content;
+    font-size: 0.6rem;
   }
 
 
@@ -49,8 +58,9 @@
     color: $purple-white;
     display: block;
     padding: 0.2rem 0.5rem;
-    border-radius: 6rem;
+    border-radius: 10px;
     margin-right: 0.6rem;
+    font-size: 0.6rem;
   }
 
 }
@@ -59,10 +69,24 @@
   background-color: $code-background;
 }
 
+.code-viewer-container {
+  margin-top: 0.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  app-error-list {
+    max-height: 200px;
+    flex-grow: 1;
+  }
+}
 .code-editor {
   //display: block;
-  width: 600px;
-  height: 600px;
+  //width: 600px;
+  //height: 600px;
+  //margin: 1rem 0;
+  width: 100%;
+  height: 100%;
 
   //.editor-container {
   //  height: calc(100vh - 100px);
