--- a/vyne-query-service/src/main/web/src/theme-colors.scss
+++ b/vyne-query-service/src/main/web/src/theme-colors.scss
@@ -45,7 +45,8 @@ $color3: rgba(84, 69, 127, 1);
 $color4: rgba(40, 42, 58, 1);
 $color5: rgba(230, 102, 65, 1);
 
-$dark-blue-1: #171F46;
+$dark-blue-1: #1d2539;
+//$dark-blue-1: #171F46;
 
 $blueish: #afdfff;
 
