LENS-46 Policy editor is hidden for prod environment

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -35,7 +35,7 @@
       <app-type-link-graph-container [member]="schemaMember"></app-type-link-graph-container>
     </section>
 
-    <section>
+    <section *ngIf="showPolicyManager">
       <h2>Policies</h2>
       <app-policy-manager-container [targetType]="type"></app-policy-manager-container>
 
