--- a/vyne-query-service/src/main/web/src/app/type-viewer/attribute-table/attribute-table.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/attribute-table/attribute-table.component.html
@@ -10,8 +10,8 @@
   <tr *ngFor="let attributeName of attributeNames">
     <td>{{ attributeName }}</td>
     <td>
-      <div><a [routerLink]="routerLinkFor(attributeName)">{{ attributeType(attributeName).name.name}}</a></div>
-      <div><span class="mono-badge">{{ attributeType(attributeName).name.fullyQualifiedName}}</span></div>
+      <div><a [routerLink]="routerLinkFor(attributeName)">{{ attributeType(attributeName).shortDisplayName }}</a></div>
+      <div><span class="mono-badge">{{ attributeType(attributeName).longDisplayName }}</span></div>
     </td>
     <td><app-description-editor *ngIf="attribute(attributeName).typeDoc" [documentationSource]="attribute(attributeName)"></app-description-editor> </td>
   </tr>
