--- a/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
@@ -1,7 +1,7 @@
 <div class="file-list" *ngIf="displaySidebar">
   <div class="file-list-entry" *ngFor="let parsedSource of sources" (click)="select(parsedSource)">
     <img class="icon" src="assets/img/file.svg">
-    <span class="file-name">{{ parsedSource.source?.name }}</span>
+    <span class="file-name">{{ parsedSource.name }}</span>
     <span class="error-count" *ngIf="parsedSource.errors?.length > 0">{{ parsedSource.errors.length }}</span>
     <span class="version" *ngIf="parsedSource.source?.version">{{ parsedSource.source.version }}</span>
   </div>
