--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-source-toolbar.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-source-toolbar.component.scss
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   border-radius: 8px;
+  width: 100%;
+
+  .upload-container {
+    width: 100%;
+  }
 
 }
 .data-source-configuration {
