--- a/vyne-query-service/src/main/web/src/theme-colors.scss
+++ b/vyne-query-service/src/main/web/src/theme-colors.scss
@@ -1,19 +1,19 @@
-$light-grey-1 : #ecf0f2;
-$light-grey-2 : #ced9de;
-$light-grey-3 : #aebfc9;
-$blue-grey-1 : #8ea5b3;
-$blue-grey-2 : #7592a2;
-$blue-grey-3 : #5d7f92;
-$dark-grey-1 : #4a6572;
-$dark-grey-2 : #344955;
-$dark-grey-3 : #232F34;
-$dark-grey-4 : #304f63;
+$light-grey-1: #ecf0f2;
+$light-grey-2: #ced9de;
+$light-grey-3: #aebfc9;
+$blue-grey-1: #8ea5b3;
+$blue-grey-2: #7592a2;
+$blue-grey-3: #5d7f92;
+$dark-grey-1: #4a6572;
+$dark-grey-2: #344955;
+$dark-grey-3: #232F34;
+$dark-grey-4: #304f63;
 
 $vyne-primary: #2b9efb;
 $purple-grey: #5d6494;
 
 $red-1: #e53935;
-$red-light: #ff6f60;
+$red-light: #f77172;
 $red-dark: #ab000d;
 
 $green: #16aa6d;
