--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -1,3 +1,8 @@
+<mat-toolbar color="primary" style="z-index: 999">
+  <span>Query History</span>
+  <span style="flex: 1"></span>
+  <app-search-bar-container></app-search-bar-container>
+</mat-toolbar>
 <div class="container">
   <div class="list-container">
     <div class="title-bar">
@@ -11,7 +16,8 @@
     <div class="history-item" *ngFor="let historyRecord of history" (click)="setActiveRecord(historyRecord)">
       <div class="query-description">
         <div class="given-line">
-          Given (<span class="type-name" *ngFor="let factName of getFactTypeNames(historyRecord); last as isLast">{{ factName }}<span
+          Given (<span class="type-name"
+                       *ngFor="let factName of getFactTypeNames(historyRecord); last as isLast">{{ factName }}<span
           *ngIf="!isLast">, </span> </span>)
         </div>
         <div class="discover-line">
