--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.scss
@@ -17,6 +17,10 @@ app-data-source-toolbar {
   margin-bottom: 2rem;
 }
 
+.drawer-content {
+  margin: 2rem 3rem;
+}
+
 .object-view-wrapper {
   margin: 1rem 0;
 }
