--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
@@ -7,6 +7,13 @@
   //padding-right: 1rem;
 }
 
+.selectable {
+  &:hover {
+    background-color: rgba($vyne-lilac, 0.1);
+    cursor: pointer;
+  }
+}
+
 .table-cell {
   display: table-cell;
   vertical-align: middle;
@@ -46,8 +53,9 @@
     color: $light-grey-1;
     text-align: center;
   }
+
   .collection-index.odd {
-    background-color: lighten($dark-grey-1,20%);
+    background-color: lighten($dark-grey-1, 20%);
   }
 
   .collection-member {
@@ -91,6 +99,7 @@
     .attribute-value {
       display: table-cell !important;
       vertical-align: middle;
+      padding-left: 1rem;
     }
 
   }
