refactor ui to be more modular, improve typed instance viewer

--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.scss
@@ -19,6 +19,7 @@ app-data-source-toolbar {
 
 .drawer-content {
   margin: 2rem 3rem;
+  width: 40vw;
 }
 
 .object-view-wrapper {
@@ -39,6 +40,10 @@ td-highlight {
   padding: 1rem;
 }
 
+::ng-deep .mat-drawer-content {
+  // Was getting unnessary horizontal scrollbars in the drawer area.
+  overflow-x: hidden;
+}
 .result-status {
   display: flex;
   align-items: center;
