--- a/vyne-query-service/src/main/web/src/app/inline-query-runner/inline-query-runner.component.scss
+++ b/vyne-query-service/src/main/web/src/app/inline-query-runner/inline-query-runner.component.scss
@@ -1,3 +1,11 @@
 ::ng-deep .mat-expansion-panel-header-title {
   align-items: center;
 }
+
+::ng-deep .mat-expansion-panel-header-description {
+  flex-direction: column;
+
+  button {
+    align-self: flex-end;
+  }
+}
