--- a/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/vyne-query-viewer/vyne-query-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/vyne-query-viewer/vyne-query-viewer.component.scss
@@ -1,5 +1,5 @@
 @import "src/theme";
-@import "../expand-panel";
+@import "src/app/expand-panel/expand-panel";
 
 .title-bar {
   background-color: white;
