--- a/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/service-graph/service-graph.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/service-graph/service-graph.component.html
@@ -3,7 +3,7 @@
     <ngx-graph class="chart-container" [links]="typeLinks.links"
                [nodes]="typeLinks.nodes" [view]="chartDimensions" autoZoom="true"
                autoCenter="true"
-               [scheme]="colorScheme" [orientation]="orientation"
+               [scheme]="colorScheme"
                [curve]="curve" >
 
       <ng-template #defsTemplate>
