--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.html
@@ -5,7 +5,7 @@
                [nodes]="typeLinks.nodes"
                autoZoom="true"
                autoCenter="true"
-               [scheme]="colorScheme" [orientation]="orientation"
+               [scheme]="colorScheme"
                [curve]="curve" (select)="select($event)">
 
       <ng-template #defsTemplate>
