--- a/vyne-query-service/src/main/web/src/app/inheritence-graph/inheritance-graph.html
+++ b/vyne-query-service/src/main/web/src/app/inheritence-graph/inheritance-graph.html
@@ -5,7 +5,7 @@
              [panningEnabled]="false"
              [autoCenter]="true"
              [draggingEnabled]="false"
-             [scheme]="colorScheme" [orientation]="orientation"
+             [scheme]="colorScheme"
              [curve]="curve" (select)="select($event)">
 
     <ng-template #defsTemplate>
